Swagger and tests improved. APIs for new comment and rate refactored.
